@@ -71,11 +71,11 @@ abstract class AbstractStrictTimeWithSubsecond extends AbstractStrictTimeWithSec
         }
         if (milliseconds < 0)
         {
-            copy.decrementSubsecond(String.format("%03d", -milliseconds), 0, 3);
+            copy.decrementSubsecond("%03d".formatted(-milliseconds), 0, 3);
         }
         else if (milliseconds != 0)
         {
-            copy.incrementSubsecond(String.format("%03d", milliseconds), 0, 3);
+            copy.incrementSubsecond("%03d".formatted(milliseconds), 0, 3);
         }
         return copy;
     }
@@ -103,11 +103,11 @@ abstract class AbstractStrictTimeWithSubsecond extends AbstractStrictTimeWithSec
         }
         if (microseconds < 0)
         {
-            copy.decrementSubsecond(String.format("%06d", -microseconds), 0, 6);
+            copy.decrementSubsecond("%06d".formatted(-microseconds), 0, 6);
         }
         else if (microseconds != 0)
         {
-            copy.incrementSubsecond(String.format("%06d", microseconds), 0, 6);
+            copy.incrementSubsecond("%06d".formatted(microseconds), 0, 6);
         }
         return copy;
     }
@@ -139,11 +139,11 @@ abstract class AbstractStrictTimeWithSubsecond extends AbstractStrictTimeWithSec
         }
         if (nanoseconds < 0)
         {
-            copy.decrementSubsecond(String.format("%09d", -nanoseconds), 0, 9);
+            copy.decrementSubsecond("%09d".formatted(-nanoseconds), 0, 9);
         }
         else if (nanoseconds != 0)
         {
-            copy.incrementSubsecond(String.format("%09d", nanoseconds), 0, 9);
+            copy.incrementSubsecond("%09d".formatted(nanoseconds), 0, 9);
         }
         return copy;
     }
